refactor: change auth schema
