# internal/controllers/environment.go
@@ -4,7 +4,6 @@ import (
 	"context"
 
 	"github.com/go-playground/validator/v10"
-	"github.com/google/uuid"
 	"github.com/zeiss/fiber-htmx/components/tables"
 	seed "github.com/zeiss/gorm-seed"
 	"github.com/zeiss/knox/internal/models"
@@ -18,19 +17,19 @@ var _ ProjectController = (*ProjectControllerImpl)(nil)
 
 // CreateEnvironmentCommand ...
 type CreateEnvironmentCommand struct {
-	TeamID    uuid.UUID `json:"team_id" form:"team_id" validate:"required"`
-	ProjectID uuid.UUID `json:"project_id" form:"project_id" validate:"required"`
-	Name      string    `json:"name" form:"name" validate:"required,min=1,max=255,alphanum,lowercase"`
-	Username  string    `json:"username" form:"username" validate:"required,min=1,max=255"`
-	Password  string    `json:"password" form:"password" validate:"required,min=1,max=255"`
+	TeamName    string `json:"team_name" form:"team_name" validate:"required"`
+	ProjectName string `json:"project_name" form:"project_name" validate:"required"`
+	Name        string `json:"name" form:"name" validate:"required,min=1,max=255,alphanum,lowercase"`
+	Username    string `json:"username" form:"username" validate:"required,min=1,max=255"`
+	Password    string `json:"password" form:"password" validate:"required,min=1,max=255"`
 }
 
 // ListEnvironmentsQuery ...
 type ListEnvironmentsQuery struct {
-	TeamID    uuid.UUID `json:"team_id" form:"team_id" validate:"required"`
-	ProjectID uuid.UUID `json:"project_id" form:"project_id" validate:"required"`
-	Limit     int       `json:"limit" form:"limit" validate:"omitempty,min=1,max=100"`
-	Offset    int       `json:"offset" form:"offset" validate:"omitempty,min=0"`
+	TeamName    string `json:"team_name" form:"team_name" validate:"required"`
+	ProjectName string `json:"project_name" form:"project_name" validate:"required"`
+	Limit       int    `json:"limit" form:"limit" validate:"omitempty,min=1,max=100"`
+	Offset      int    `json:"offset" form:"offset" validate:"omitempty,min=0"`
 }
 
 // EnvironmentControllerImpl ...
@@ -61,7 +60,7 @@ func (c *EnvironmentControllerImpl) CreateEnvironment(ctx context.Context, cmd C
 	}
 
 	project := models.Project{
-		ID: cmd.ProjectID,
+		Name: cmd.ProjectName,
 	}
 
 	err = c.store.ReadTx(ctx, func(ctx context.Context, tx ports.ReadTx) error {
@@ -98,7 +97,7 @@ func (c *EnvironmentControllerImpl) ListEnvironments(ctx context.Context, query 
 	}
 
 	err = c.store.ReadTx(ctx, func(ctx context.Context, tx ports.ReadTx) error {
-		return tx.ListEnvironments(ctx, query.ProjectID, &results)
+		return tx.ListEnvironments(ctx, query.TeamName, query.ProjectName, &results)
 	})
 	if err != nil {
 		return results, err
